@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,26 +17,36 @@ public class RecommendPersonalMovieService {
     private final RecommendPersonalRatedNeo4jService graphService;
 
     public List<MovieRecommendPersonalResponse> getTop10PersonalMovies(Long userId) {
-        Map<String, Double> genreScoreMap = ratingService.calculateGenrePreferences(userId);
-        Map<String, Double> tagScoreMap = ratingService.calculateTagPreferences(userId);
-
         List<MovieEntity> candidates = ratingService.findAllReleasedMovies();
+        List<Long> movieIds = candidates.stream().map(MovieEntity::getId).toList();
+
+        Map<Long, List<String>> genreMap = graphService.getGenresByMovieIds(movieIds);
+        Map<Long, List<String>> tagMap = graphService.getTagsByMovieIds(movieIds);
+
+        Map<String, Double> genreScoreMap = ratingService.calculateGenrePreferences(userId, genreMap);
+        Map<String, Double> tagScoreMap = ratingService.calculateTagPreferences(userId, tagMap);
 
         return candidates.stream()
                 .map(movie -> {
-                    List<String> genres = graphService.getGenresByMovieId(movie.getId());
-                    List<String> tags = graphService.getTagsByMovieId(movie.getId());
+                    List<String> genres = genreMap.getOrDefault(movie.getId(), List.of());
+                    List<String> tags = tagMap.getOrDefault(movie.getId(), List.of());
 
-                    double score = genres.stream().mapToDouble(g -> genreScoreMap.getOrDefault(g, 0.0)).average().orElse(0.0)
-                            + tags.stream().mapToDouble(t -> tagScoreMap.getOrDefault(t, 0.0)).average().orElse(0.0);
+                    double genreAvg = genres.stream()
+                            .mapToDouble(g -> genreScoreMap.getOrDefault(g, 0.0)).average().orElse(0.0);
+                    double tagAvg = tags.stream()
+                            .mapToDouble(t -> tagScoreMap.getOrDefault(t, 0.0)).average().orElse(0.0);
+
+                    double score = (genreAvg + tagAvg) * 100;  // 👈 스케일 업
 
                     return new AbstractMap.SimpleEntry<>(movie, score);
                 })
                 .sorted((e1, e2) -> Double.compare(e2.getValue(), e1.getValue()))
                 .limit(10)
-                .map(e -> MovieRecommendPersonalResponse.from(e.getKey(), e.getValue(),
-                        graphService.getGenresByMovieId(e.getKey().getId()),
-                        graphService.getTagsByMovieId(e.getKey().getId())))
-                .collect(Collectors.toList());
+                .map(e -> MovieRecommendPersonalResponse.from(
+                        e.getKey(), e.getValue(),
+                        genreMap.getOrDefault(e.getKey().getId(), List.of()),
+                        tagMap.getOrDefault(e.getKey().getId(), List.of())
+                ))
+                .toList();
     }
 }
